Changed the artifact name to reflect the type of native library being built.

--- a/pom.xml
+++ b/pom.xml
@@ -1,284 +1,300 @@
 <project>
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.yaz4j</groupId>
-  <artifactId>yaz4j-lib</artifactId>
-  <version>1.2-SNAPSHOT</version>
-  <packaging>pom</packaging>
 
-  <!-- Project Information -->
-  <name>yaz4j</name>
-  <url>http://www.indexdata.com/yaz4j/</url>
-  <inceptionYear>2008</inceptionYear>
-  <licenses>
-    <license>
-      <name>BSD</name>
-      <url>http://www.opensource.org/licenses/bsd-license.php</url>
-    </license>
-  </licenses>
-  <description>Java wrapper for the ZOOM API of YAZ</description>
+	<modelVersion>4.0.0</modelVersion>
+	
+	<groupId>org.yaz4j</groupId>
+	<artifactId>yaz4j-lib</artifactId>
+	<version>1.2-SNAPSHOT</version>
+	
+	<packaging>pom</packaging>
 
-  <developers>
-    <developer>
-      <name>Rob Styles</name>
-      <id>rob</id>
-      <email>Rob.Styles@talis.com</email>
-      <organization>Talis</organization>
-      <organizationUrl>http://www.talis.com/</organizationUrl>
-      <roles />
-      <timezone />
-    </developer>
-    <developer>
-      <name>Adam Dickmeiss</name>
-      <id>adam</id>
-      <email>adam@indexdata.dk</email>
-      <organization>Index Data</organization>
-      <organizationUrl>http://www.indexdata.com/</organizationUrl>
-      <roles />
-      <timezone />
-    </developer>
-    <developer>
-      <name>Jakub Skoczen</name>
-      <id>jakub</id>
-      <email>jakub@indexdata.dk</email>
-      <organization>Index Data</organization>
-      <organizationUrl>http://www.indexdata.com/</organizationUrl>
-      <roles />
-      <timezone />
-    </developer>
-    <developer>
-      <name>Juan Cayetano</name>
-      <id>cayetano</id>
-      <email>juancayetano.delgado@gmail.com</email>
-      <organization />
-      <organizationUrl />
-      <roles />
-      <timezone />
-    </developer>
-  </developers>
+	<!-- Project Information -->
+	<name>yaz4j</name>
+	<url>http://www.indexdata.com/yaz4j/</url>
+	<inceptionYear>2008</inceptionYear>
+	<licenses>
+		<license>
+			<name>BSD</name>
+			<url>http://www.opensource.org/licenses/bsd-license.php</url>
+		</license>
+	</licenses>
+	<description>Java wrapper for the ZOOM API of YAZ</description>
 
-  <modules>
+	<developers>
+		<developer>
+			<name>Rob Styles</name>
+			<id>rob</id>
+			<email>Rob.Styles@talis.com</email>
+			<organization>Talis</organization>
+			<organizationUrl>http://www.talis.com/</organizationUrl>
+			<roles />
+			<timezone />
+		</developer>
+		<developer>
+			<name>Adam Dickmeiss</name>
+			<id>adam</id>
+			<email>adam@indexdata.dk</email>
+			<organization>Index Data</organization>
+			<organizationUrl>http://www.indexdata.com/</organizationUrl>
+			<roles />
+			<timezone />
+		</developer>
+		<developer>
+			<name>Jakub Skoczen</name>
+			<id>jakub</id>
+			<email>jakub@indexdata.dk</email>
+			<organization>Index Data</organization>
+			<organizationUrl>http://www.indexdata.com/</organizationUrl>
+			<roles />
+			<timezone />
+		</developer>
+		<developer>
+			<name>Juan Cayetano</name>
+			<id>cayetano</id>
+			<email>juancayetano.delgado@gmail.com</email>
+			<organization />
+			<organizationUrl />
+			<roles />
+			<timezone />
+		</developer>
+	</developers>
+	
+	  <modules>
     <module>any</module>
   </modules>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.3.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.3.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>generate-sources</id>
-            <phase>generate-sources</phase>
-            <inherited>false</inherited>
-            <configuration>
-              <tasks>
-                <echo message="Using include: ${yaz.include}"/>
-                <mkdir dir="target/generated-sources/java/org/yaz4j/jni"/>
-                <mkdir dir="target/generated-sources/native" />
-                <exec executable="${swig}">
-                  <arg value="-Isrc/main/native" />
-                  <arg value="${yaz.include}"/>
-                  <arg value="-outdir"/>
-                  <arg value="${basedir}/target/generated-sources/java/org/yaz4j/jni"/>
-                  <arg value="-package"/>
-                  <arg value="org.yaz4j.jni"/>
-                  <arg value="-o"/>
-                  <arg value="${basedir}/target/generated-sources/native/libyaz4j.cpp"/>
-                  <arg value="-c++"/>
-                  <arg value="-java"/>
-                  <arg value="src/main/swig/libyaz4j.i"/>
-                </exec>
-              </tasks>
-            </configuration>
-            <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>generate-sources</id>
+						<phase>generate-sources</phase>
+						<inherited>false</inherited>
+						<configuration>
+							<tasks>
+								<echo message="Using include: ${yaz.include}" />
+								<mkdir dir="target/generated-sources/java/org/yaz4j/jni" />
+								<mkdir dir="target/generated-sources/native" />
+								<exec executable="${swig}">
+									<arg value="-Isrc/main/native" />
+									<arg value="${yaz.include}" />
+									<arg value="-outdir" />
+									<arg value="${basedir}/target/generated-sources/java/org/yaz4j/jni" />
+									<arg value="-package" />
+									<arg value="org.yaz4j.jni" />
+									<arg value="-o" />
+									<arg value="${basedir}/target/generated-sources/native/libyaz4j.cpp" />
+									<arg value="-c++" />
+									<arg value="-java" />
+									<arg value="src/main/swig/libyaz4j.i" />
+								</exec>
+							</tasks>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.0.4</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
-  <!-- Reporting -->
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <configuration>
-          <enableRSS>false</enableRSS>
-          <include>**/*.java</include>
-          <sourceDirectory>src/main/java</sourceDirectory>
-        </configuration>
-      </plugin>
+	<!-- Reporting -->
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>2.9.1</version>
+				<configuration>
+					<enableRSS>false</enableRSS>
+					<include>**/*.java</include>
+					<sourceDirectory>src/main/java</sourceDirectory>
+				</configuration>
+			</plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>
-          maven-project-info-reports-plugin
-        </artifactId>
-        <reportSets>
-          <reportSet>
-            <reports>
-              <report>dependencies</report>
-              <report>project-team</report>
-              <report>mailing-list</report>
-              <report>issue-tracking</report>
-              <report>summary</report>
-              <report>scm</report>
-              <report>index</report>
-            </reports>
-          </reportSet>
-        </reportSets>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <chartset>UTF-8</chartset>
-          <excludePackageNames>org.yaz4j.jni</excludePackageNames>
-        </configuration>
-      </plugin>
-    </plugins>
-  </reporting>
-  <!-- ////////////// -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.6</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>dependencies</report>
+							<report>project-team</report>
+							<report>mailing-list</report>
+							<report>issue-tracking</report>
+							<report>summary</report>
+							<report>scm</report>
+							<report>index</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9</version>
+				<configuration>
+					<chartset>UTF-8</chartset>
+					<excludePackageNames>org.yaz4j.jni</excludePackageNames>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
+	<!-- ////////////// -->
 
-  <!-- Environment Information -->
-  <mailingLists>
-    <mailingList>
-      <name>Yazlist</name>
-      <subscribe />
-      <unsubscribe />
-      <post>yazlist@lists.indexdata.dk</post>
-      <archive>http://lists.indexdata.dk/pipermail/yazlist/</archive>
-    </mailingList>
-  </mailingLists>
+	<!-- Environment Information -->
+	<mailingLists>
+		<mailingList>
+			<name>Yazlist</name>
+			<subscribe />
+			<unsubscribe />
+			<post>yazlist@lists.indexdata.dk</post>
+			<archive>http://lists.indexdata.dk/pipermail/yazlist/</archive>
+		</mailingList>
+	</mailingLists>
 
-  <scm>
-    <connection>scm:git:git://git.indexdata.com/yaz4j</connection>
-    <url>http://git.indexdata.com/?p=yaz4j.git</url>
-  </scm>
+	<scm>
+		<connection>scm:git:git://git.indexdata.com/yaz4j</connection>
+		<url>http://git.indexdata.com/?p=yaz4j.git</url>
+	</scm>
 
-  <issueManagement>
-    <system>Bugzilla</system>
-    <url>http://bugzilla.indexdata.dk</url>
-  </issueManagement>
+	<issueManagement>
+		<system>Bugzilla</system>
+		<url>http://bugzilla.indexdata.dk</url>
+	</issueManagement>
 
-  <profiles>
-    <profile>
-      <id>win32</id>
-      <activation>
-        <os>
-          <family>windows</family>
-        </os>
-      </activation>
-      <properties>
-        <platform>win32</platform>
-        <yaz.path>C:\Program Files\YAZ</yaz.path>
-        <swig>C:\Program Files\swigwin-2.0.7\swig</swig>
-        <!-- needed by swig -->
-        <yaz.include>"-I${yaz.path}\include"</yaz.include>
-        <yaz.libs>"${yaz.path}\lib\yaz4.lib"</yaz.libs>
-      </properties>
-      <modules>
-        <module>win32</module>
-      </modules>
-    </profile>
+	<profiles>
+		<profile>
+			<id>win32</id>
+			<activation>
+				<os>
+					<family>windows</family>
+				</os>
+			</activation>
+			<properties>
+				<platform>win32</platform>
+				<yaz.path>C:\Program Files\YAZ</yaz.path>
+				<swig>C:\Program Files\swigwin-2.0.7\swig</swig>
+				<!-- needed by swig -->
+				<yaz.include>"-I${yaz.path}\include"</yaz.include>
+				<yaz.libs>"${yaz.path}\lib\yaz4.lib"</yaz.libs>
+			</properties>
+			<modules>
+				<module>win32</module>
+			</modules>
+		</profile>
 
-    <profile>
-      <id>unix</id>
-      <activation>
-        <os>
-          <family>unix</family>
-        </os>
-      </activation>
-      <properties>
-        <platform>linux</platform>
-        <packaging>so</packaging>
-        <!-- yaz-config executable -->
-        <yaz.config>yaz-config</yaz.config>
-	<swig>swig</swig>
-        <javahOS>linux</javahOS>
-        <jdkIncludePath>${java.home}/../include</jdkIncludePath>
-      </properties>
-      <modules>
-        <module>unix</module>
-      </modules>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>write-swig-include</id>
-                <phase>initialize</phase>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-                <configuration>
-                  <tasks>
-                    <exec executable="${yaz.config}" 
-                      outputproperty="yaz.include">
-                      <arg value="--include" />
-                    </exec>
-                    <echo message="YAZ INCLUDE=${yaz.include}"/>
-                    <mkdir dir="${basedir}/target"/>
-                    <echo file="${basedir}/target/swig.properties"
-                      message="yaz.include=${yaz.include}"/>
-                  </tasks>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin> 
-            <groupId>org.codehaus.mojo</groupId> 
-            <artifactId>properties-maven-plugin</artifactId> 
-            <version>1.0-alpha-1</version> 
-            <executions> 
-              <execution> 
-                <id>read-swig-config</id> 
-                <phase>initialize</phase> 
-                <goals> 
-                  <goal>read-project-properties</goal> 
-                </goals> 
-                <configuration> 
-                  <files> 
-                    <file>${basedir}/target/swig.properties</file> 
-                  </files> 
-                </configuration> 
-              </execution> 
-            </executions> 
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
+		<profile>
+			<id>unix</id>
+			<activation>
+				<os>
+					<family>unix</family>
+				</os>
+			</activation>
+			<properties>
+				<platform>linux</platform>
+				<packaging>so</packaging>
+				<!-- yaz-config executable -->
+				<yaz.config>yaz-config</yaz.config>
+				<swig>swig</swig>
+				<javahOS>linux</javahOS>
+				<jdkIncludePath>${java.home}/../include</jdkIncludePath>
+			</properties>
+			<modules>
+				<module>unix</module>
+			</modules>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>write-swig-include</id>
+								<phase>initialize</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<tasks>
+										<exec executable="${yaz.config}" outputproperty="yaz.include">
+											<arg value="--include" />
+										</exec>
+										<echo message="YAZ INCLUDE=${yaz.include}" />
+										<mkdir dir="${basedir}/target" />
+										<echo file="${basedir}/target/swig.properties" message="yaz.include=${yaz.include}" />
+									</tasks>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>properties-maven-plugin</artifactId>
+						<version>1.0-alpha-1</version>
+						<executions>
+							<execution>
+								<id>read-swig-config</id>
+								<phase>initialize</phase>
+								<goals>
+									<goal>read-project-properties</goal>
+								</goals>
+								<configuration>
+									<files>
+										<file>${basedir}/target/swig.properties</file>
+									</files>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 
-    <profile>
-      <!-- osx is both 'unix' and 'mac' -->
-      <id>osx</id>
-      <activation>
-        <os>
-          <family>mac</family>
-        </os>
-      </activation>
-      <properties>
-        <platform>osx</platform>
-        <packaging>dylib</packaging>
-        <javahOS>mac</javahOS>
-        <jdkIncludePath>${java.home}/../Headers</jdkIncludePath>
-      </properties>
-      <modules>
-        <module>unix</module>
-      </modules>
-    </profile>
-  </profiles>
+		<profile>
+			<!-- osx is both 'unix' and 'mac' -->
+			<id>osx</id>
+			<activation>
+				<os>
+					<family>mac</family>
+				</os>
+			</activation>
+			<properties>
+				<platform>osx</platform>
+				<packaging>dylib</packaging>
+				<javahOS>darwin</javahOS>
+				<jdkIncludePath>${java.home}/../include</jdkIncludePath>
+			</properties>
+			<modules>
+				<module>unix</module>
+			</modules>
+		</profile>
+	</profiles>
+
 </project>
 
