--- a/unix/pom.xml
+++ b/unix/pom.xml
@@ -7,6 +7,7 @@
   </parent>
   <groupId>org.yaz4j</groupId>
   <artifactId>libyaz4j</artifactId>
+  <version>1.2-${os.name}-${os.arch}-SNAPSHOT</version>
   <name>libyaz4j</name>
   <packaging>${packaging}</packaging>
 
@@ -173,4 +174,13 @@
       </releases>
     </pluginRepository>
   </pluginRepositories>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>org.yaz4j</groupId>
+  		<artifactId>yaz4j-any</artifactId>
+  		<version>1.2-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
+  
 </project>
